--- a/src/HeadsetBatteryOverlay/HeadsetBatteryOverlay.csproj
+++ b/src/HeadsetBatteryOverlay/HeadsetBatteryOverlay.csproj
@@ -7,7 +7,7 @@
 		<UseWPF>true</UseWPF>
 		<UseWindowsForms>true</UseWindowsForms>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Platforms>x64</Platforms>
+		<Platforms>x64;ARM64</Platforms>
 		<PlatformTarget>x64</PlatformTarget>
 		<Prefer32Bit>false</Prefer32Bit>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
@@ -17,12 +17,12 @@
 		<Content Include="third_party\hidapi\x64\hidapi.dll" Condition="Exists('third_party\hidapi\x64\hidapi.dll')">
 			<Link>hidapi.dll</Link>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
 		</Content>
-	</ItemGroup>
 
-	<ItemGroup>
 		<Content Include="tray.ico">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
 		</Content>
 	</ItemGroup>
 </Project>
